src/tui/snapshots/agctl__tui__ui__tests__an_empty_display_says_so_rather_than_showing_nothing.snap
---
source: src/tui/ui_tests.rs
expression: terminal.backend()
---
"agctl claude watch · 0 accounts · last fetch — · next fetch "
"no accounts to show                                         "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"q quit · r refresh · ↑↓ select                              "
